--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Data too larger to include
+data/
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb_checkpoints
